# vps-config

./: .gitignore  CLAUDE.md  README.md  SETUP_COMMANDS.md  justfile  pyproject.toml
.claude/: settings.json
ansible/group_vars/: all.yml  home_server.yml
ansible/inventories/: claudecodeui.yml  hosts.yml  nodes.yml  production.yml  remnawave-test.yml
ansible/inventories/nodes/: README.md  node-template.yml
ansible/inventories/remnawave-test/: .secrets.yml.example  README.md
ansible/playbooks/: claudecodeui.yml  home_server.yml  node.yml  remnawave.yml  site.yml
clash-verge/: merge-override.yaml  rules-override.yaml
docs/: REMNAWAVE_DNS_SETUP.md  REMNAWAVE_FIX_GUIDE.md  REMNAWAVE_SETUP.md  certificate-setup.md  deploying-multiple-nodes.md  troubleshooting.md
remnawave-config/: add_node.py  client.py  export.py  models.py  snapshot.py  sync.py
remnawave-config/templates/: mihomo-ru-split.yaml
scripts/: __init__.py  certs.py  cli.py  diagnose-vpn-connectivity.sh  extract-node-certificates.sh  gen_keys.py  secrets.py  test-reality-destinations.sh
scripts/certs/: generate-letsencrypt.sh
src/vps_cli/: __init__.py  __main__.py  ansible.py  certs.py  errors.py  health_check.py  secrets.py  test_local.py  util.py  validate.py
src/vps_cli/cli/: __init__.py  certs.py  deploy.py  doctor.py  local.py  remnawave.py  secrets.py  server.py  setup.py  status.py
src/vps_cli/remnawave/: add_node.py  client.py  export.py  gen_keys.py  models.py  snapshot.py  template.py
telegram-bot/: Dockerfile  bot.py  config.py  implementation-plan.md  minecraft.py  monitoring.py  pyproject.toml  remnawave.py  run-local.sh  spec.md
(+139 files in other folders)
